# schnaps

./: .gitignore  CMakeLists.txt  README.md  TODO.md  cemracs_speed.py  convergence.asy  convergence_test.py  disque.geo  disque.msh  get_opencl_code.sh  get_opencl_code_apple.sh  libamdocl.supp  nvvp.cfg  speed.asy  speed_test.py  starpu_install.sh  test_transportvp  vtime.py
cmake/: FindHWLOC.cmake  FindOpenCL.cmake  FindSTARPU.cmake  FindStarPU.cmake  Findflann.cmake  Findigraph.cmake  Findsuitesparse.cmake
doc/: Doxyfile  atlas4  biblio_chapitre_schnaps.bib  clac-schnaps.lyx  condlimwave.mw  divcleaning.mw  divcleaning.sage  doxyschnaps  h20geom.mws  horoch_juin2016.bib  horoch_juin2016.cfg  horoch_juin2016.tex  horoch_juin2016_v1.lyx  horoch_t30_t131_IRMA_rapport_detude_et_devaluation_des_performances_sur_la_parallelisation_hybride.docx  hybridbasis.mw  lobatto.mw  maxwell_clean.mw  maxwellclean.sws  schnaps.lyx  schnapsjuin2015.lyx  stretching.mw  testimplicit.mw  testlaglob.mw  verif_hexa8_dtw.mw
doc/Notes_reduced_collision/: Reduced_Kinetic.aux
doc/SPPEXA/: MPI.eps  SPPEXA.lyx  SPPEXA.txt  answer-helluy-iwocl.20.lyx  big-formula.lyx  diaposclac.bib  graph_example.dia  graph_example_2.dia  helluy-axessim-2015.tex  helluy-iwocl-2015.bib  helluy-iwocl-2015.html  helluy-iwocl-2015.tex  helluy-orap-2015.bib  helluy-sppexa-2016.bib  helluy-sppexa-2016.tex  helluy.bib  rmi-smai-2015.lyx  sig-alternate.cls  slides-iwocl-helluy.lyx  slides-jlesc2015-helluy.lyx  slides-orap2015-helluy.lyx  slides-pasc15-helluy.lyx  workshopsum.lyx
doc/ader-dg/: ader-dg.lyx  aderdg.c  aderdg.h  makefile  micmake  predictor-ader.mw  predictor-ader.mws
doc/cemracs 2015/: Cemracs15.aux  Cemracs15.tex  Cemracs15.toc  Implicit_version_7.aux  Implicit_version_7.tex  Synthesis_version_1.aux  Synthesis_version_1.tex  biblio_synthese.bib
doc/implicit/: CMakeLists.txt  dg_implicit.c  dg_implicit.h  lobatto.c  lobatto.h  riemisot.f  skyline.c  skyline.h
doc/lattice_bgk_semilag/: compare_sol.py  riemisot.f  semi_lag  semi_lag.F90  semi_lag_module.F90  semi_lag_module.mod  test_diagnostics_module.F90
doc/schnaps_opencl/: IJFV.cls  answers_ref.lyx  resu.txt  schnaps_opencl2017.bib  schnaps_opencl2017.tex  schnaps_opencl2017_horoch.lyx  schnaps_opencl2018.lyx  schnaps_opencl2020.tex  tab_schnaps_opencl.ods
doc/these_bruno/: 1ere.tex  4eme.tex  ader_trans_homogene_calc.plt  ader_trans_homogene_exact.plt  ader_trans_local_calc.plt  ader_trans_local_exact.plt  ader_trans_local_levels.plt  annexe_demo_cv.tex  annexe_demo_existence.tex  annexe_kyoto.tex  base_quad.mw  biblio.bib  compile.sh  conclusion.tex  cutplane_unstruct_10.plt  cutplane_unstruct_20.plt  cutplane_unstruct_40.plt  cutplane_unstruct_5.plt  diag_vp.plt  gauss_mod.plt  generalites.tex  header.tex  implementation.tex  introduction.tex  invitation.tex  local_time_scheme.tex  modeles.tex  optimisations.tex  plan.txt  plane_wave_exact_modE_xoz_t_1ns_y_15cm_mesh_cube30cm_ref_30.plt  remerciements.tex  runtimes.tex  stab_rk1.plt  stab_rk1.py  stab_rk2.plt  stab_rk2.py  stab_rk3.plt  stab_rk3.py  stretching_x.plt  stretching_y.plt  (+2 more)
doc/these_pierre/: .gitignore  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex  compile.sh  couverture.cls  couverture.tex  introduction.tex  notations.tex  these.bib  these.tex
example/: test_m1_spec_gaussian_cube.c  test_sn_spec_gaussian_cube.c  test_torus.geo  test_torus_400.msh  test_transportvp.c  testacousticsn_spu.c  testcoil2d.c  testcollision.c  testdoubletearing.c  testguidingcenter.c  testguidingcenterOCL.c  testgyro.c  testkelvinhelmotz.c  testkernelflux.c  testlandau_damping_1D.c  testlattice_generic.c  testlattice_isothermal.c  testlaura_spu.c  testmhd.c  testmhd1d.c  testorszagtang.c  testorszagtang_spu.c  testpic.c  testpic_accumulate.c  testpython_call.c  testreconnexion.c  testriemann3d.c  testslicepoisson.c  testwave2d.c
geo/: cartesiangrid2d.geo  cbump2d.geo  cbump2d.msh  convergence.asy  cube.geo  cube.msh  cube4Pi.geo  cubegros.geo  cylindre.geo  cylindre.msh  disque-trou.geo  disque.geo  disque2.geo  disque2d.geo  grid.geo  permutcube.geo  sphereincube.geo  square.geo  square.msh  testcube.msh  testcube2.msh  unit-cube.msh
model/mhd/: mhdModel.h  mhdmodel.c  mhdmodel.h
python_scripts/: ReshapeVelocityMesh.py  SphereGeo.py  SphereInt.py  speed_test.py  test_laura_change_raf.py  test_laura_run_hybrid  test_laura_submit_job  vtime.py
src/: acoustic.c  acoustic.h  advanced_linear_solver.c  advanced_linear_solver.h  clinfo.c  clinfo.h  clutils.c  clutils.h  collision.c  collision.h  csparse_spu.c  csparse_spu.h  diagnostics_vp.c  diagnostics_vp.h  dpackfgmres.c  dpackfgmres.h  dpackgmres.f  field.c  field.cl  field.h  field_cl.c  field_cl.h  field_spu.cl  geometry.c  geometry.h  global.c  global.h  gyro.c  gyro.h  h20.c  h20.h  h20phi.h  implicit.c  implicit.h  interface.c  interface.h  interpolation.c  interpolation.h  io.c  io.h  (+62 more)
test/: disque2d.msh  model_trans.cl  permutcube.msh  test.h  test2dmeshdetection.c  testKHgrid.msh  testOTgrid.msh  test_transportvp.c  test_user_model_spu.c  testacousticsn_transport_spu.c  testcache_cl.c  testcartesiangrid1d.msh  testcartesiangrid2d.msh  testcartesiangrid2d2.msh  testclinfo.c  testcodelet_addbuffer_spu.c  testcodelet_dgmacrocellboundaryflux_spu.c  testcodelet_dgmacrocellinterface_spu.c  testcodelet_dgmass_spu.c  testcodelet_dgsubcellinterface_spu.c  testcodelet_dgvolume_spu.c  testcodelet_extractinterface_spu.c  testcodelet_zerobuffer_spu.c  testcoil2d.c  testcube2.msh  testcubetordu.msh  testdisque.msh  testdisque2d.msh  testdoubletearing.c  testdoubletearinggrid.msh  testdtfield3d_cl.c  testdtfield_cl.c  testfield.c  testfielddg.c  testfielddg_bis.c  testfielddg_spu.c  testfieldrk2-2d-subcell.c  testfieldrk2-2d.c  testfieldrk2.c  testfieldrk2_cl.c  (+53 more)
vnodes/: lebedev_003.txt  lebedev_005.txt  lebedev_007.txt  lebedev_009.txt  lebedev_011.txt  sf001.00003  sf002.00006  sf003.00008  sf004.00014  sf005.00018  sf006.00026  sf007.00032  sf008.00042  sf009.00050  sf010.00062  sf011.00072
(+131 files in other folders)
